--- a/index.html
+++ b/index.html
@@ -8,23 +8,38 @@
         <meta name="author" content="Usman Plazo">
         <title>Q2-FA1-Plazo</title>
         <style>
-            a{
-                border: 5px double red;
-                text-decoration: none;
-            }
-            a:link{
+
+            ham:link{
                 color:black;
+                background-color: blue;
             }
-            a:visited{
+            ham:visited{
             color:rgb(85, 96, 160);
+            background-color: red;
             }
-            a:hover{
+            ham:hover{
              color: rgb(0, 0, 0);
             background-color: rgb(238, 222, 203);
             }
-            a:active{
+            ham:active{
             color:rgb(27, 27, 27);
             background-color: #f0c487;
+            }
+            burger:link{
+                color:blue;
+                background-color: red;
+            }
+            burger:visited{
+            color:rgb(85, 60, 120);
+            background-color: yellow;
+            }
+            burger:hover{
+             color: rgb(0, 0, 0);
+            background-color: rgb(200, 222, 103);
+            }
+            burger:active{
+            color:rgb(27, 27, 90);
+            background-color: gray;
             }
             #patty:target{
                 border: 10px dotted green;
@@ -36,8 +51,8 @@
         </style>
     </head>
     <body>
-        <a href="#buns">This is button 1</a>
-        <a href="#patty">This is button 2</a>
+        <a href="#buns" class="ham">This is button 1</a>
+        <a href="#patty"class="burger">This is button 2</a>
         <br>
         <div id="buns"><p>This is Div 1</p></div>
         <div id="patty"><p>This is Div 2</p></div>
