--- a/index.html
+++ b/index.html
@@ -9,35 +9,35 @@
         <title>Q2-FA1-Plazo</title>
         <style>
 
-            ham:link{
+            .ham:link{
                 color:black;
                 background-color: blue;
             }
-            ham:visited{
+            .ham:visited{
             color:rgb(85, 96, 160);
             background-color: red;
             }
-            ham:hover{
+            .ham:hover{
              color: rgb(0, 0, 0);
             background-color: rgb(238, 222, 203);
             }
-            ham:active{
+            .ham:active{
             color:rgb(27, 27, 27);
             background-color: #f0c487;
             }
-            burger:link{
+            .burger:link{
                 color:blue;
                 background-color: red;
             }
-            burger:visited{
+            .burger:visited{
             color:rgb(85, 60, 120);
             background-color: yellow;
             }
-            burger:hover{
+            .burger:hover{
              color: rgb(0, 0, 0);
             background-color: rgb(200, 222, 103);
             }
-            burger:active{
+            .burger:active{
             color:rgb(27, 27, 90);
             background-color: gray;
             }
